ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tlakomer-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-externalip
    #ingress.gcp.kubernetes.io/pre-shared-cert: "<ssl-cert-name>" # для HTTPS, если у вас есть сертификат
spec:
  rules:
  - host: #tlakomer.com # замените на свой домен
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: tlakomer-be-svc
            port:
              number: 8088
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: tlakomer-be-svc
            port:
              number: 8088
      - path: /v3/api-docs
        pathType: Prefix
        backend:
          service:
            name: tlakomer-be-svc
            port:
              number: 8088
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tlakomer-fe-svc
            port:
              number: 80
